<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="clear_cache_menu">Check for updates</string>
    <string name="clear_cache_complete_toast">Update complete.</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="application_name">John Smith Galleries for Android</string>
    <string name="menu_about">Find Out More</string>
    <string name="owner_email">subrock@gmail.com</string>

    <string name="title_activity_about">@string/application_name</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="application_story">Welcome to my virtual gallery. Here you can do many things. To find out more click this link.</string>

    <string name="menu_detail_contact">Contact Artist</string>
    <string name="menu_detail_download">Download Free Copy</string>
    <string name="menu_detail_share">Share Image</string>
    <string name="menu_detail_buy">Buy this painting</string>
    <string name="menu_detail_order">Order Prints</string>

</resources>