<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.displayingbitmaps.ui.ImageDetailActivity">

    <item
        android:id="@+id/contact_artist"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="never"
        android:title="@string/menu_detail_contact"/>
    <item
        android:id="@+id/contact_download"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="never"
        android:title="@string/menu_detail_download"/>
    <item
        android:id="@+id/contact_share"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="never"
        android:title="@string/menu_detail_share"/>

    <item
        android:id="@+id/contact_buy"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="never"
        android:title="@string/menu_detail_buy"/>

    <item
        android:id="@+id/contact_order"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="never"
        android:title="@string/menu_detail_order"/>


</menu>
